# gsopt

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  bootstrap_cudaq.sh  plot_style.py  pyproject.toml  show_gsopt_log.py
.agents/skills/: gsopt  quantum-scout
ai-skills/gsopt/: SKILL.md
ai-skills/quantum-scout/: SKILL.md
benchkit/: __init__.py  cli.py  common.py  entrypoints.py  optuna_eval.py  optuna_utils.py  optuna_wrapper.py  registry.py  runtime.py  scaffold.py  show_queues.py  trial_eval.py  watchdog.py
examples/: __init__.py  config_override.py  evaluator_utils.py
examples/afqmc/: PERIODIC_TARGETS.md  README.md  __init__.py  benchmark_evaluate.py  compute_reference_energies.py  diff_iterations.py  model_registry.py  molecular_benchmark.py  optuna_baseline.py  periodic_benchmark.py  queued_track_iteration.py  reference_energies.json  reference_energies.py  restore_best_iteration.py  run_codex_watchdog.py  simple_afqmc.py  track_iteration.py  update_reference_source.py
examples/dmrg/: README.md  __init__.py  benchmark_evaluate.py  compute_reference_energies.py  diff_iterations.py  model_registry.py  optuna_baseline.py  queued_track_iteration.py  reference_energies.json  restore_best_iteration.py  search.py  simple_dmrg.py  track_iteration.py
examples/gibbs/: README.md  __init__.py  benchmark.py  search.py  simple_gibbs_mcmc.py
examples/tn/: README.md  __init__.py  benchmark_evaluate.py  (+10 more)
experiments/: generated_afqmc_improvement_tables.tex  generated_tn_log_tables.tex  generated_vqe_log_tables.tex  logs.tex
skills/: __init__.py
(+208 files in other folders)
